--- a/Xray/App.xaml
+++ b/Xray/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:viewModel="clr-namespace:Xray.ViewModel"
-             StartupUri="View/MainWindow.xaml">
+             StartupUri="View/MainWindow.xaml" Exit="App_OnExit">
     <Application.Resources>
         <viewModel:ViewModelLocator x:Key="Locator" />
     </Application.Resources>
